--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -55,7 +55,7 @@
            <th:block th:each="assignment : ${assignments}">
              <div class="form-check input-group radio">
                <label class="form-check-label">
-                 <input class="form-check-input" type="radio" name="assignment" th:text="${assignment.left}" th:value="${assignment.left}" th:id="${assignment.left}" th:attr="time=${assignment.right}" />
+                 <input class="form-check-input" type="radio" name="assignment" th:text="' ' + ${assignment.left}" th:value="${assignment.left}" th:id="${assignment.left}" th:attr="time=${assignment.right}" />
                </label>
              </div>
            </th:block>
@@ -85,17 +85,25 @@
 
     <div class="row">
       <div class="col-6">
-        <ul>
-          <li th:each="repo : ${repos}">
-            <input type="radio" name="repo" th:value="${repo.name}"  th:text="${repo.name} +| / | + ${repo.branch}"/>
-          </li>
-        </ul>
+        <th:block th:each="repo : ${repos}">
+          <div class="form-check input-group radio">
+            <label class="form-check-label">
+              <input class="form-check-input" type="radio" name="repo" th:text="' ' + ${repo.name} +| / | + ${repo.branch}" th:value="${repo.name}" th:id="${repo.name}" />
+            </label>
+          </div>
+        </th:block>
       </div>
     </div>
+
     <div class="row p-2">
       <div class="p-2 col-6">
         <button id="clone"  class="btn btn-primary" onclick="cloneAssignmentsRepo();">Clone assignments repo</button>
         <p id="response"></p>
+      </div>
+    </div>
+
+    <div class="row p-2">
+      <div class="p-2 col-6">
         <form class="mt-5" method="POST" action="/upload" enctype="multipart/form-data">
           <div>
             <label class="btn btn-outline-secondary" for="file">
@@ -108,8 +116,6 @@
         <a class="btn btn-link" href="/getresults">get results</a>
       </div>
     </div>
-
-  </div>
         
 <script type="text/javascript" src="/js/taskcontrol.js"></script>
 </body>
