--- a/src/main/resources/templates/testfeedback.html
+++ b/src/main/resources/templates/testfeedback.html
@@ -3,65 +3,103 @@
 <head>
 	<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
 	          href="/webjars/bootstrap/4.0.0-beta-1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}"/>
 	<link href="/css/testfeedback.css" rel="stylesheet" />
 </head>
 
 <body onload=init() class="p-2">
     <div class="container-fluid">
         <!-- content -->
-        <div class="row mt-3">
-            <div class="col-6 mt-4">
-                <div class="text-center">
-                    <h3>Assignment: [[${assignment}]]</h3>
-                </div>
-                <div class="p-2 d-flex justify-content-center">
-                    <div id="assignment-clock" th:attrappend="data-time-left=${timeLeft},data-time=${time}"
-                         class="align-self-center">
-                        <div class="time d-flex justify-content-center" style="height: 370px; width: 370px;">
-                            <h2 class="align-self-center">--:--</h2>
-                        </div>
-                        <svg width="370" height="370" xmlns="http://www.w3.org/2000/svg">
-                            <g>
-                                <circle class="clock circle_animation" r="150" cy="185" cx="185"
-                                        stroke-width="25"
-                                        stroke="#6fdb6f" fill="none"></circle>
-                            </g>
-                        </svg>
-                    </div>
+        <div class="row mt-3 mb-3">
+            <div class="col-1 d-flex justify-content-center">
+                <div class="align-self-center">
+                    <img th:src="@{/images/moj_logo_128x97_2017.png}" class="img-fluid"
+                         src="/static/images/moj_logo_128x97_2017.png"/>
                 </div>
             </div>
-            <div class="col-6">
-                <div class="row justify-content-center">
-                    <div>
-                        <img th:src="@{/images/moj_logo_128x97_2017.png}" class="img-fluid"
-                             src="/static/images/moj_logo_128x97_2017.png"/>
-                    </div>
-                    <div class="pl-5 align-self-center">
-                        <h1>Live assignment progress</h1>
-                    </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="align-self-center">
+                    <h1>Live Assignment Progress</h1>
                 </div>
-                <div class="row mt-3">
-                    <div class="col">
-                        <table id="team-progress" class="table">
-                            <thead>
-                                <tr>
-                                    <th></th>
-                                    <th>Team</th>
-                                    <th>Total score</th>
-                                    <th>Test progression</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr th:each="team : ${teams}">
-                                    <td th:text="${team.name}">Team name</td>
-                                    <td th:text="${team.totalScore}">Total score</td>
-                                </tr>
-                            </tbody>
-                        </table>
+            </div>
+            <div class="col-5 d-flex justify-content-center">
+                <div class="align-self-center">
+                    <h1>Assignment: [[${assignment}]]</h1>
+                </div>
+            </div>
+            <div class="col-2 d-flex justify-content-center">
+                <div id="assignment-clock" th:attrappend="data-time-left=${timeLeft},data-time=${time}"
+                     class="align-self-center">
+                    <div class="time d-flex justify-content-center" style="height: 160px; width: 160px;">
+                        <h2 class="align-self-center">--:--</h2>
                     </div>
+                    <svg width="160" height="160" xmlns="http://www.w3.org/2000/svg">
+                        <g>
+                            <circle class="clock circle_animation" r="69.85699" cy="81" cx="81"
+                                    stroke-width="8"
+                                    stroke="#6fdb6f" fill="none"></circle>
+                        </g>
+                    </svg>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-4">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Team</th>
+                                <th:block th:each="test,status : ${tests}">
+                                    <th th:text="'Test ' + ${status.index + 1}">Test #</th>
+                                </th:block>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="team : ${teams1}">
+                                <td th:text="${team.shortName}">Team name</td>
+                                <td th:each="test : ${tests}"><span th:id="${team.name} + '-' + ${test}"></span></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-4">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Team</th>
+                                <th:block th:each="test,status : ${tests}">
+                                    <th th:text="'Test ' + ${status.index + 1}">Test #</th>
+                                </th:block>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="team : ${teams2}">
+                                <td th:text="${team.shortName}">Team name</td>
+                                <td th:each="test : ${tests}"><span th:id="${team.name} + '-' + ${test}"></span></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            <div class="col-4">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Team</th>
+                            <th:block th:each="test,status : ${tests}">
+                                <th th:text="'Test ' + ${status.index + 1}">Test #</th>
+                            </th:block>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="team : ${teams3}">
+                            <td th:text="${team.shortName}">Team name</td>
+                            <td th:each="test : ${tests}"><span th:id="${team.name} + '-' + ${test}"></span></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
         <!-- footer -->
         <div class="fixed-bottom footer d-flex">
             <div class="mr-auto p-2">
