--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -113,7 +113,7 @@
                 <button id="compile" class="btn w-50 btn-success" th:disabled="${finished}">Compile</button>
             </div>
             <div th:if="${running}" class="p-2  text-center">
-                <button id="show-tests" class="btn w-50 btn-success" data-toggle="modal" data-target="#test-modal" th:disabled="${finished}">Test
+                <button id="show-tests" class="btn w-50 btn-success" data-toggle="modal" data-target="#test-modal" onclick="resetTabColor();" th:disabled="${finished}">Test
                 </button>
             </div>
             <div th:if="${running}" class="mt-5 p-2 text-center">
