--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -90,7 +90,7 @@
                 <div class="text-center">
                     <h3>Time Left</h3>
                 </div>
-                <div id="assignment-clock" th:attrappend="data-time-left=${timeLeft},data-time=${time}"
+                <div id="assignment-clock" th:attrappend="data-time-left=${timeLeft},data-time=${time},running=${running}"
                      class="align-self-center">
                     <div class="time d-flex justify-content-center" style="height: 160px; width: 160px;">
                         <h2 class="align-self-center">--:--</h2>
