--- a/src/main/resources/templates/rankings.html
+++ b/src/main/resources/templates/rankings.html
@@ -32,7 +32,7 @@
                 <h3>Assignment: [[${assignment}]]</h3>
             </div>
             <div class="p-2 d-flex justify-content-center">
-                <div id="assignment-clock" th:attrappend="data-time-left=${timeLeft},data-time=${time}"
+                <div id="assignment-clock" th:attrappend="data-time-left=${timeLeft},data-time=${time},running=${running}"
                      class="align-self-center">
                     <div class="time d-flex justify-content-center" style="height: 370px; width: 370px;">
                         <h2 class="align-self-center">--:--</h2>
