--- a/src/main/resources/templates/testfeedback.html
+++ b/src/main/resources/templates/testfeedback.html
@@ -7,7 +7,7 @@
 	<link href="/css/testfeedback.css" rel="stylesheet" />
 </head>
 
-<body onload=init() class="p-2">
+<body class="p-2">
     <div class="container-fluid">
         <!-- content -->
         <div class="row mt-3 mb-3">
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="col-2 d-flex justify-content-center">
-                <div id="assignment-clock" th:attrappend="data-time-left=${timeLeft},data-time=${time}"
+                <div id="assignment-clock" th:attrappend="data-time-left=${timeLeft},data-time=${time},running=${running}"
                      class="align-self-center">
                     <div class="time d-flex justify-content-center" style="height: 160px; width: 160px;">
                         <h2 class="align-self-center">--:--</h2>
@@ -109,10 +109,12 @@
         </div>
     </div>
 
+<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/popper.js/dist/umd/popper.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+
  <script src="/webjars/sockjs-client/sockjs.min.js"></script>
  <script src="/webjars/stomp-websocket/stomp.min.js"></script>
- <script src="/webjars/jquery/jquery.min.js"></script>
- <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
  <script src="/js/testfeedback.js"></script>
 </body>
 </html>
