update layout of rankings page

--- a/src/main/resources/templates/rankings.html
+++ b/src/main/resources/templates/rankings.html
@@ -63,20 +63,20 @@
                         <thead>
                         <tr>
                             <th></th>
-                            <th>Team</th>
-                            <th th:each="assignment,iterStat : ${assignments}" th:text="'#' + ${iterStat.count}"></th>
-                            <th>Total Score</th>
+                            <th class="text-center">Team</th>
+                            <th class="text-center" th:each="assignment,iterStat : ${assignments}" th:text="'#' + ${iterStat.count}"></th>
+                            <th class="text-center">Total Score</th>
                         </tr>
                         </thead>
                         <tbody>
                         <!--/*@thymesVar id="top" type="java.util.List<nl.moj.server.model.Ranking>"*/-->
                         <tr th:each="ranking,status : ${top}" th:class="${'rank-'+status.index}">
-                            <td th:text="${ranking.rank}"></td>
+                            <td class="text-center" th:text="${ranking.rank}"></td>
                             <td th:text="${ranking.team}">teamname</td>
                             <th:block th:each="result : ${ranking.results}">
-                                <td th:text="${result.score}">0</td>
+                                <td class="text-center" th:text="${result.score}">0</td>
                             </th:block>
-                            <td th:text="${ranking.totalScore}">3</td>
+                            <td class="text-center" th:text="${ranking.totalScore}">3</td>
                         </tr>
                         </tbody>
                     </table>
@@ -84,22 +84,22 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row mt-5">
         <div class="col-3">
             <table id="bottom1" class="table table-sm">
                 <thead>
                 <tr>
                     <th></th>
-                    <th>Team</th>
-                    <th>Total Score</th>
+                    <th class="text-center">Team</th>
+                    <th class="text-center">Total Score</th>
                 </tr>
                 </thead>
                 <tbody>
                 <!--/*@thymesVar id="bottom1" type="java.util.List<nl.moj.server.model.Ranking>"*/-->
                 <tr th:each="ranking : ${bottom1}">
-                    <td th:text="${ranking.rank}"></td>
-                    <td th:text="${ranking.team}">teamname</td>
-                    <td th:text="${ranking.totalScore}">3</td>
+                    <td class="text-center" th:text="${ranking.rank}"></td>
+                    <td class="text-center" th:text="${ranking.team}">teamname</td>
+                    <td class="text-center" th:text="${ranking.totalScore}">3</td>
                 </tr>
                 </tbody>
             </table>
@@ -109,16 +109,16 @@
                 <thead>
                 <tr>
                     <th></th>
-                    <th>Team</th>
-                    <th>Total Score</th>
+                    <th class="text-center">Team</th>
+                    <th class="text-center">Total Score</th>
                 </tr>
                 </thead>
                 <tbody>
                 <!--/*@thymesVar id="bottom2" type="java.util.List<nl.moj.server.model.Ranking>"*/-->
                 <tr th:each="ranking : ${bottom2}">
-                    <td th:text="${ranking.rank}"></td>
-                    <td th:text="${ranking.team}">teamname</td>
-                    <td th:text="${ranking.totalScore}">3</td>
+                    <td class="text-center" th:text="${ranking.rank}"></td>
+                    <td class="text-center" th:text="${ranking.team}">teamname</td>
+                    <td class="text-center" th:text="${ranking.totalScore}">3</td>
                 </tr>
                 </tbody>
             </table>
@@ -128,16 +128,16 @@
                 <thead>
                 <tr>
                     <th></th>
-                    <th>Team</th>
-                    <th>Total Score</th>
+                    <th class="text-center">Team</th>
+                    <th class="text-center">Total Score</th>
                 </tr>
                 </thead>
                 <tbody>
                 <!--/*@thymesVar id="bottom3" type="java.util.List<nl.moj.server.model.Ranking>"*/-->
                 <tr th:each="ranking : ${bottom3}">
-                    <td th:text="${ranking.rank}"></td>
-                    <td th:text="${ranking.team}">teamname</td>
-                    <td th:text="${ranking.totalScore}">3</td>
+                    <td class="text-center" th:text="${ranking.rank}"></td>
+                    <td class="text-center" th:text="${ranking.team}">teamname</td>
+                    <td class="text-center" th:text="${ranking.totalScore}">3</td>
                 </tr>
                 </tbody>
             </table>
@@ -147,16 +147,16 @@
                 <thead>
                 <tr>
                     <th></th>
-                    <th>Team</th>
-                    <th>Total Score</th>
+                    <th class="text-center">Team</th>
+                    <th class="text-center">Total Score</th>
                 </tr>
                 </thead>
                 <tbody>
-                <!--/*@thymesVar id="bottom3" type="java.util.List<nl.moj.server.model.Ranking>"*/-->
+                <!--/*@thymesVar id="bottom4" type="java.util.List<nl.moj.server.model.Ranking>"*/-->
                 <tr th:each="ranking : ${bottom4}">
-                    <td th:text="${ranking.rank}"></td>
-                    <td th:text="${ranking.team}">teamname</td>
-                    <td th:text="${ranking.totalScore}">3</td>
+                    <td class="text-center" th:text="${ranking.rank}"></td>
+                    <td class="text-center" th:text="${ranking.team}">teamname</td>
+                    <td class="text-center" th:text="${ranking.totalScore}">3</td>
                 </tr>
                 </tbody>
             </table>
