fixed clock syncing

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -169,7 +169,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Are you sure you want to submit?</h5>
+                <h5 class="modal-title">Are you sure you want to submit?</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -201,6 +201,7 @@
 <script type="text/javascript" th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
 
+<script type="text/javascript" th:src="@{/js/clock.js}"></script>
 <script type="text/javascript" th:src="@{/js/app.js}"></script>
 
 </body>
