--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -24,10 +24,10 @@
     <title>Control</title>
 </head>
 <body class="p-2">
-  <div class="container-fluid">
+<div class="container-fluid">
 
     <div class="row">
-      <div class="col-3 d-flex flex-column">
+        <div class="col-3 d-flex flex-column">
             <div class="p-2 align-self-center">
                 <div class="text-center">
                     <h3>Time Left</h3>
@@ -48,75 +48,82 @@
             </div>
         </div>
 
-       <div class="offset-1 col-8 d-flex flex-column mt-5">
-         <div class="row">
+        <div class="offset-1 col-8 d-flex flex-column mt-5">
+            <div class="row">
 
-         <div class="form-group col-3">
-           <th:block th:each="assignment : ${assignments}">
-             <div class="form-check input-group radio">
-               <label class="form-check-label">
-                 <input class="form-check-input" type="radio" name="assignment" th:text="' ' + ${assignment.left}" th:value="${assignment.left}" th:id="${assignment.left}" th:attr="time=${assignment.right}" />
-               </label>
-             </div>
-           </th:block>
-         </div>
+                <div class="form-group col-3">
+                    <th:block th:each="assignment : ${assignments}">
+                        <div class="form-check input-group radio">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="radio" name="assignment"
+                                       th:text="' ' + ${assignment.left}" th:value="${assignment.left}"
+                                       th:id="${assignment.left}" th:attr="time=${assignment.right}"/>
+                            </label>
+                        </div>
+                    </th:block>
+                </div>
 
-         <div class="form-group col-9">
-           <div class="row">
-           <div class="btn-group-vertical col-4">
-             <div class="p-2 text-center">
-               <button id="start" class="btn btn-success" onclick="startTask();">Start Assignment</button>
-             </div>
-             <div class="p-2 text-center">
-               <button id="stop" class="btn btn-danger" onclick="stopTask();">Stop Assignment</button>
-             </div>
-           </div>
-           <div class="p-2 text-center col-4">
-             <button id="clear" class="btn btn-warning" onclick="clearAssignment();">Clear Current Assignment</button>
-           </div>
-           </div>
-         </div>
-         </div>
+                <div class="form-group col-9">
+                    <div class="row">
+                        <div class="btn-group-vertical col-4">
+                            <div class="p-2 text-center">
+                                <button id="start" class="btn btn-success" onclick="startTask();">Start Assignment
+                                </button>
+                            </div>
+                            <div class="p-2 text-center">
+                                <button id="stop" class="btn btn-danger" onclick="stopTask();">Stop Assignment</button>
+                            </div>
+                        </div>
+                        <div class="p-2 text-center col-4">
+                            <button id="clear" class="btn btn-warning" onclick="clearAssignment();">Clear Current
+                                Assignment
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-       </div>
-     </div>
-
+        </div>
     </div>
 
-    <div class="row">
-      <div class="col-6">
+</div>
+
+<div class="row">
+    <div class="col-6">
         <th:block th:each="repo : ${repos}">
-          <div class="form-check input-group radio">
-            <label class="form-check-label">
-              <input class="form-check-input" type="radio" name="repo" th:text="' ' + ${repo.name} +| / | + ${repo.branch}" th:value="${repo.name}" th:id="${repo.name}" />
-            </label>
-          </div>
+            <div class="form-check input-group radio">
+                <label class="form-check-label">
+                    <input class="form-check-input" type="radio" name="repo"
+                           th:text="' ' + ${repo.name} +| / | + ${repo.branch}" th:value="${repo.name}"
+                           th:id="${repo.name}"/>
+                </label>
+            </div>
         </th:block>
-      </div>
     </div>
+</div>
 
-    <div class="row p-2">
-      <div class="p-2 col-6">
-        <button id="clone"  class="btn btn-primary" onclick="cloneAssignmentsRepo();">Clone assignments repo</button>
+<div class="row p-2">
+    <div class="p-2 col-6">
+        <button id="clone" class="btn btn-primary" onclick="cloneAssignmentsRepo();">Clone assignments repo</button>
         <p id="response"></p>
-      </div>
     </div>
+</div>
 
-    <div class="row p-2">
-      <div class="p-2 col-6">
+<div class="row p-2">
+    <div class="p-2 col-6">
         <form class="mt-5" method="POST" action="/upload" enctype="multipart/form-data">
-          <div>
-            <label class="btn btn-outline-secondary" for="file">
-              <input id="file" type="file" name="file" hidden />
-              bladeren...
-            </label>
-          </div>
-          <input class="btn btn-primary form-control col-3" type="submit" value="upload"/>
+            <div>
+                <label class="btn btn-outline-secondary" for="file">
+                    <input id="file" type="file" name="file" hidden/>
+                    bladeren...
+                </label>
+            </div>
+            <input class="btn btn-primary form-control col-3" type="submit" value="upload"/>
         </form>
         <a class="btn btn-link" href="/getresults">get results</a>
-      </div>
     </div>
-        
-<script type="text/javascript" src="/js/taskcontrol.js"></script>
+</div>
+<script type="text/javascript" th:src="@{/js/clock.js}"></script>
+<script type="text/javascript" th:src="@{/js/taskcontrol.js}"></script>
 </body>
 </html>
