updated rankings page to show individual breakdown of scores in a popup

--- a/src/main/resources/templates/rankings.html
+++ b/src/main/resources/templates/rankings.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
           href="/webjars/bootstrap/4.0.0-beta-1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}"
+          href="/webjars/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" th:href="@{/css/rankings.css}" href="/static/css/rankings.css"/>
 
     <link rel="apple-touch-icon" sizes="180x180" th:href="@{/images/apple-touch-icon.png}"
@@ -32,7 +34,8 @@
                 <h3>Assignment: [[${assignment}]]</h3>
             </div>
             <div class="p-2 d-flex justify-content-center">
-                <div id="assignment-clock" th:attrappend="data-time-left=${timeLeft},data-time=${time},running=${running}"
+                <div id="assignment-clock"
+                     th:attrappend="data-time-left=${timeLeft},data-time=${time},running=${running}"
                      class="align-self-center">
                     <div class="time d-flex justify-content-center" style="height: 370px; width: 370px;">
                         <h2 class="align-self-center">--:--</h2>
@@ -64,7 +67,8 @@
                         <tr>
                             <th></th>
                             <th class="text-center">Team</th>
-                            <th class="text-center" th:each="assignment,iterStat : ${assignments}" th:text="'#' + ${iterStat.count}"></th>
+                            <th class="text-center" th:each="assignment,iterStat : ${assignments}"
+                                th:text="'#' + ${iterStat.count}"></th>
                             <th class="text-center">Total Score</th>
                         </tr>
                         </thead>
@@ -91,7 +95,7 @@
                 <tr>
                     <th></th>
                     <th class="text-center">Team</th>
-                    <th class="text-center">Total Score</th>
+                    <th class="text-center">Total Score <span class="fa fa-question-circle grey" data-container="body" data-trigger="hover" data-toggle="popover" data-placement="top" data-content="You can hover over the scores to see the individual assignment breakdown."></span></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -99,7 +103,9 @@
                 <tr th:each="ranking : ${bottom1}">
                     <td class="text-center" th:text="${ranking.rank}"></td>
                     <td class="text-center" th:text="${ranking.team}">teamname</td>
-                    <td class="text-center" th:text="${ranking.totalScore}">3</td>
+                    <td class="text-center" th:attrappend="data-score-popup=${ranking.getResultJson()}">
+                        [[${ranking.totalScore}]]
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -110,7 +116,7 @@
                 <tr>
                     <th></th>
                     <th class="text-center">Team</th>
-                    <th class="text-center">Total Score</th>
+                    <th class="text-center">Total Score <span class="fa fa-question-circle grey" data-container="body" data-trigger="hover" data-toggle="popover" data-placement="top" data-content="You can hover over the scores to see the individual assignment breakdown."></span></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -118,7 +124,9 @@
                 <tr th:each="ranking : ${bottom2}">
                     <td class="text-center" th:text="${ranking.rank}"></td>
                     <td class="text-center" th:text="${ranking.team}">teamname</td>
-                    <td class="text-center" th:text="${ranking.totalScore}">3</td>
+                    <td class="text-center" th:attrappend="data-score-popup=${ranking.getResultJson()}">
+                        [[${ranking.totalScore}]]
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -129,7 +137,7 @@
                 <tr>
                     <th></th>
                     <th class="text-center">Team</th>
-                    <th class="text-center">Total Score</th>
+                    <th class="text-center">Total Score <span class="fa fa-question-circle grey" data-container="body" data-trigger="hover" data-toggle="popover" data-placement="top" data-content="You can hover over the scores to see the individual assignment breakdown."></span></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -137,7 +145,9 @@
                 <tr th:each="ranking : ${bottom3}">
                     <td class="text-center" th:text="${ranking.rank}"></td>
                     <td class="text-center" th:text="${ranking.team}">teamname</td>
-                    <td class="text-center" th:text="${ranking.totalScore}">3</td>
+                    <td class="text-center" th:attrappend="data-score-popup=${ranking.getResultJson()}">
+                        [[${ranking.totalScore}]]
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -148,7 +158,7 @@
                 <tr>
                     <th></th>
                     <th class="text-center">Team</th>
-                    <th class="text-center">Total Score</th>
+                    <th class="text-center">Total Score <span class="fa fa-question-circle grey" data-container="body" data-trigger="hover" data-toggle="popover" data-placement="top" data-content="You can hover over the scores to see the individual assignment breakdown."></span></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -156,7 +166,9 @@
                 <tr th:each="ranking : ${bottom4}">
                     <td class="text-center" th:text="${ranking.rank}"></td>
                     <td class="text-center" th:text="${ranking.team}">teamname</td>
-                    <td class="text-center" th:text="${ranking.totalScore}">3</td>
+                    <td class="text-center" th:attrappend="data-score-popup=${ranking.getResultJson()}">
+                        [[${ranking.totalScore}]]
+                    </td>
                 </tr>
                 </tbody>
             </table>
