disabled h2 console, added label for current assignment on control page

--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -75,7 +75,8 @@
                             </div>
                         </div>
                         <div class="p-2 text-center col-4">
-                            <button id="clear" class="btn btn-warning" onclick="clearAssignment();">Clear Current
+                            <span>Current Assignment: [[${currentAssignment}]]</span>
+                            <button id="clear" class="btn btn-warning ml-2" onclick="clearAssignment();">Clear Current
                                 Assignment
                             </button>
                         </div>
