--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,9 +41,13 @@
                     <h3>Assignment: [[${assignment}]]</h3>
                 </div>
                 <div id="alert-container">
-                    <div th:if="${finished}" class="alert alert-success p-4" role="alert">
+                    <div th:if="${finished and (finalscore &gt; 0)}" class="alert alert-success p-4" role="alert">
                         <h4 class="alert-heading">Assignment Submitted</h4>
                         <p>Well done!. You have submitted the assignment for final review. Chill out and wait until the next assignment starts.</p>
+                    </div>
+                    <div th:if="${finished and finalscore == 0}" class="alert alert-danger p-4" role="alert">
+                        <h4 class="alert-heading">Assignment Tests Failed :-(</h4>
+                        <p>Your score is 0. Chill out and wait until the next assignment starts. Better luck next time!</p>
                     </div>
                 </div>
                 <div th:unless="${finished}" id="tabs">
