--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,11 +65,10 @@
                         </li>
                     </ul>
                     <div class="tab-content">
-                        <div class="tab-pane fade" th:classappend="${status.index==0?'show active':''}" role="tabpanel"
+                        <div class="tab-pane" th:classappend="${status.index==0?'show active':''}" role="tabpanel"
                              th:each="file,status : ${files}" th:id="${file.name + '-tab'}">
                             <div class="tab-pane-content">
-                                <textarea th:if="${file.fileType.name()}"
-                                          th:attr="data-cm=${file.name},data-cm-file-type=${file.fileType},data-cm-readonly=${file.readOnly},data-cm-filename=${file.filename}"
+                                <textarea th:attr="data-cm=${file.name},data-cm-file-type=${file.fileType},data-cm-readonly=${file.readOnly},data-cm-filename=${file.filename}"
                                           th:utext="${file.content}"></textarea>
                             </div>
                         </div>
