added team export/import

--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -122,6 +122,7 @@
             <input class="btn btn-primary form-control col-3" type="submit" value="upload"/>
         </form>
         <a class="btn btn-link" href="/getresults">get results</a>
+        <a class="btn btn-link" href="/getteams">get teams</a>
     </div>
 </div>
 <script type="text/javascript" th:src="@{/js/clock.js}"></script>
