--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -109,7 +109,7 @@
             </div>
             <div th:if="${running}" class="mt-5 p-2 text-center">
                 <a class="btn w-50 btn-warning text-white"
-                   href="https://docs.oracle.com/javase/9/docs/api/overview-summary.html"
+                   th:href="@{/javadoc/api/index.html(overview-tree.html)}"
                    target="_blank">Javadoc</a>
             </div>
             <div th:if="${running}" class="p-2 text-center">
