--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
             <div class="text-center mt-5" th:unless="${running}">
                 <h1>No active assignment</h1>
                 <p>At the moment there is no assignment active. Once an assignment is started you will automatically be
-                    shown he assignment.</p>
+                    shown the assignment. (If not press F5 to reload the page.)</p>
             </div>
 
             <!--/*@thymesVar id="finished" type="java.lang.Boolean"*/-->
