--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,7 +69,7 @@
                              th:each="file,status : ${files}" th:id="${file.uuid + '-tab'}">
                             <div class="tab-pane-content">
                                 <textarea th:attr="data-cm=${file.uuid},data-cm-file-type=${file.fileType},data-cm-readonly=${file.readOnly},data-cm-name=${file.shortName}"
-                                          th:utext="${file.content}"></textarea>
+                                          th:utext="${file.getContentAsString()}"></textarea>
                             </div>
                         </div>
                         <div class="tab-pane fade" role="tabpanel" id="output-tab">
