--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,9 @@
 
     <title>Masters of Java 2017</title>
 
-    <link rel="stylesheet" th:href="@{/webjars/codemirror-minified/addon/hint/show-hint.css}"/>
-    <link rel="stylesheet" th:href="@{/webjars/codemirror-minified/lib/codemirror.css}"/>
-    <link rel="stylesheet" th:href="@{/webjars/jquery-ui-themes/smoothness/jquery-ui.min.css}"/>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
-          href="/webjars/bootstrap/4.0.0-beta-1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" th:href="@{/webjars/codemirror/addon/hint/show-hint.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/codemirror/lib/codemirror.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/index.css}"/>
 
     <link rel="apple-touch-icon" sizes="180x180" th:href="@{/images/apple-touch-icon.png}" href="/static/images/apple-touch-icon.png" />
@@ -57,8 +55,10 @@
                             <a class="nav-link"
                                th:classappend="${(status.index==0?'active':'') + (file.readOnly?'':' editable')}"
                                th:id="${file.uuid}"
-                               th:href="${'#'+file.uuid + '-tab'}" data-toggle="tab"
-                               th:text="${file.shortName}"></a>
+                               th:href="${'#tab-'+file.uuid}" data-toggle="tab"
+                            >
+                                [[${file.shortName}]]
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="output" href="#output-tab" data-toggle="tab">Output</a>
@@ -66,7 +66,7 @@
                     </ul>
                     <div class="tab-content">
                         <div class="tab-pane" th:classappend="${status.index==0?'show active':''}" role="tabpanel"
-                             th:each="file,status : ${files}" th:id="${file.uuid + '-tab'}">
+                             th:each="file,status : ${files}" th:id="${'tab-'+file.uuid}">
                             <div class="tab-pane-content">
                                 <textarea th:attr="data-cm=${file.uuid},data-cm-file-type=${file.fileType},data-cm-readonly=${file.readOnly},data-cm-name=${file.shortName}"
                                           th:utext="${file.getContentAsString()}"></textarea>
@@ -192,15 +192,15 @@
 
 
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/popper.js/dist/umd/popper.min.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/popper.js/popper.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 
-<script type="text/javascript" th:src="@{/webjars/codemirror-minified/lib/codemirror.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/codemirror-minified/addon/edit/matchbrackets.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/codemirror-minified/addon/selection/active-line.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/codemirror-minified/addon/hint/show-hint.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/codemirror-minified/mode/clike/clike.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror/lib/codemirror.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror/addon/edit/matchbrackets.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror/addon/selection/active-line.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror/addon/hint/show-hint.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror/mode/clike/clike.js}"></script>
 
 <script type="text/javascript" th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
