--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@
                             <a class="nav-link"
                                th:classappend="${(status.index==0?'active':'') + (file.readOnly?'':' editable')}"
                                th:id="${file.uuid}"
-                               th:href="${'#'+file.uuid + '-tab'}" data-toggle="tab"
+                               th:href="${'#tab-'+file.uuid}" data-toggle="tab"
                                th:text="${file.shortName}"></a>
                         </li>
                         <li class="nav-item">
@@ -66,7 +66,7 @@
                     </ul>
                     <div class="tab-content">
                         <div class="tab-pane" th:classappend="${status.index==0?'show active':''}" role="tabpanel"
-                             th:each="file,status : ${files}" th:id="${file.uuid + '-tab'}">
+                             th:each="file,status : ${files}" th:id="${'tab-'+file.uuid}">
                             <div class="tab-pane-content">
                                 <textarea th:attr="data-cm=${file.uuid},data-cm-file-type=${file.fileType},data-cm-readonly=${file.readOnly},data-cm-name=${file.shortName}"
                                           th:utext="${file.getContentAsString()}"></textarea>
