MoJ2018 logo used client side scaling so it is easier to replace next year (should be moved to a config sometime anyway)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -83,8 +83,8 @@
 
         <div class="col-3 d-flex flex-column">
             <div class="p-2 align-self-center">
-                <img th:src="@{/images/moj_logo_128x97_2017.png}" class="img-fluid"
-                     src="/static/images/moj_logo_128x97_2017.png"/>
+                <img width="128" height="97" th:src="@{/images/moj_logo.png}" class="img-fluid"
+                     src="/static/images/moj_logo.png"/>
             </div>
             <div class="p-2 align-self-center">
                 <h2>Team: [[${team}]]</h2>
