--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
 <div class="container">
     <div class="row">
         <div class="col text-center">
-            <img th:src="@{/images/moj_logo_319x243_2017.png}" src="/static/images/moj_logo_319x243_2017.png"/>
+            <img width="319" height="243" th:src="@{/images/moj_logo.png}" src="/static/images/moj_logo.png"/>
         </div>
     </div>
     <div class="row pt-4">
