--- a/src/main/resources/templates/rankings.html
+++ b/src/main/resources/templates/rankings.html
@@ -53,8 +53,8 @@
         <div class="col-6">
             <div class="row justify-content-center">
                 <div>
-                    <img th:src="@{/images/moj_logo_128x97_2017.png}" class="img-fluid"
-                         src="/static/images/moj_logo_128x97_2017.png"/>
+                    <img width="128" height="97" th:src="@{/images/moj_logo.png}" class="img-fluid"
+                         src="/static/images/moj_logo.png"/>
                 </div>
                 <div class="pl-5 align-self-center">
                     <h1>Ranking</h1>
