--- a/src/main/resources/templates/testfeedback.html
+++ b/src/main/resources/templates/testfeedback.html
@@ -25,8 +25,8 @@
     <div class="row mt-3 mb-3">
         <div class="col-1 d-flex justify-content-center">
             <div class="align-self-center">
-                <img th:src="@{/images/moj_logo_128x97_2017.png}" class="img-fluid"
-                     src="/static/images/moj_logo_128x97_2017.png"/>
+                <img width="128" height="97" th:src="@{/images/moj_logo.png}" class="img-fluid"
+                     src="/static/images/moj_logo.png"/>
             </div>
         </div>
         <div class="col-4 d-flex justify-content-center">
